# Queue-Reactive

./: .gitignore  .nojekyll  CMakeLists.txt  Containerfile  LICENSE  README.md  index.html  model.html  orderbook.html  pyproject.toml  robots.txt  search.json  simulation.html  sitemap.xml  styles.css  vcpkg.json
cpp/include/: json_helpers.h  orderbook.h  qr_model.h  simulation.h  strategy.h  types.h
cpp/src/: orderbook.cpp  qr_model.cpp  simulation.cpp
docs/: impact_calibration.qmd
docs/site/: _quarto.yml  index.qmd  model.qmd  orderbook.qmd  simulation.qmd
notebooks/paper_notebooks/: Impact_likelihood_calibration.ipynb  alpha.ipynb  delta_t.ipynb  emp_vs_qr.ipynb  hf_strat.ipynb  impact.ipynb  qr_stats.ipynb
scripts/: calibrate_impact.py  daily_estimates.py  estimate_qr_params.py  plot_emp_vs_qr.py
site_libs/bootstrap/: bootstrap-0736d62889a6a221a67ba4d03882f876.min.css  bootstrap-5ee32fd12e4893cbbd3c89dbebe6ed2c.min.css
src/qr/: estimations.py  preprocessing.py  utils.py
tests/: orderbook_test.cpp
