[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qr"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasketches>=5.2.0",
    "matplotlib>=3.10.8",
    "polars>=1.0.0",
    "scienceplots>=2.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.0.0",
    "plotly>=6.6.0",
    "jupyterlab>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qr"]

[dependency-groups]
dev = [
    "memray>=1.19.1",
]
